収益を登録する

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -11,3 +11,8 @@
      <li><%= link_to '新規登録', new_user_registration_path , class: "sign-up" %></li>
   <% end %>
 </ul>
+
+<%#収入登録機能へのフォーム%>
+<ul>
+  <li><%= link_to '勝ったときはこちら', incomes_path %></li>
+</ul>
