--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -14,5 +14,6 @@
 
 <%#収入登録機能へのフォーム%>
 <ul>
-  <li><%= link_to '勝ったときはこちら', incomes_path %></li>
+  <li><%= link_to '勝ったときはこちら', new_income_path %></li>
+  <li><%= link_to '負けたときはこちら', new_payment_path %></li>
 </ul>
