--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -31,53 +31,53 @@
 
   <!-- 選択された月の日毎の収支テーブル -->
   <% if params[:selected_month].present? %>
-  <h3><%= params[:selected_month] %> の日毎の収入</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>日付</th>
-        <th>収入</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @incomes_by_date.each do |income| %>
+    <h3><%= params[:selected_month] %> の日毎の収入</h3>
+    <table>
+      <thead>
         <tr>
-          <td><%= income.date.strftime("%Y年%m月%d日") %></td>
-          <td><%= income.price %></td>
-          <td>
-            <%= link_to "編集", edit_income_path(income) %>
-            <%= link_to "削除", income_path(income), data: { turbo_method: :delete } %>
-          </td>
+          <th>日付</th>
+          <th>収入</th>
+          <th>操作</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @incomes_by_date.each do |income| %>
+          <tr>
+            <td><%= income.date.strftime("%Y年%m月%d日") %></td>
+            <td><%= income.price %></td>
+            <td>
+              <%= link_to "編集", edit_income_path(income) %>
+              <%= link_to "削除", income_path(income), data: {turbo_method: :delete } %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   <% end %>
 
   <% if params[:selected_month].present? %>
-  <h3><%= params[:selected_month] %> の日毎の支出</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>日付</th>
-        <th>支出</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @payments_by_date.each do |payment| %>
+    <h3><%= params[:selected_month] %> の日毎の支出</h3>
+    <table>
+      <thead>
         <tr>
-          <td><%= payment.date.strftime("%Y年%m月%d日") %></td>
-          <td><%= payment.price %></td>
-          <td>
-            <%= link_to "編集", edit_payment_path(payment) %>
-            <%= link_to "削除", payment_path(payment), data: { turbo_method: :delete } %>
-          </td>
+          <th>日付</th>
+          <th>支出</th>
+          <th>操作</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @payments_by_date.each do |payment| %>
+          <tr>
+            <td><%= payment.date.strftime("%Y年%m月%d日") %></td>
+            <td><%= payment.price %></td>
+            <td>
+              <%= link_to "編集", edit_payment_path(payment) %>
+              <%= link_to "削除", payment_path(payment), data: { confirm: '本当に削除しますか？', turbo_method: :delete } %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   <% end %>
 
 <% end %>
