--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,21 +1,21 @@
-<% if @income.errors.any? %>
+<% if @payment.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@income.errors.count, "error") %> prohibited this income from being saved:</h2>
+    <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this income from being saved:</h2>
 
     <ul>
-    <% @income.errors.full_messages.each do |message| %>
+    <% @payment.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
     </ul>
   </div>
 <% end %>
 
-<h2>収入額の編集</h2>
+<h2>支出額の編集</h2>
 <%= link_to 'ホーム', root_path %>
-<p>勝った日を設定してください</p>
+<p>負けた日を設定してください</p>
 
 
-<%= form_with model: @income, local: true, data: {turbo: false} do |f| %>
+<%= form_with model: @payment, local: true, data: {turbo: false} do |f| %>
   <%= raw sprintf(
         f.date_select(
           :date,
@@ -24,10 +24,10 @@
         ),
         "年", "月") + "日"
   %>
-  <p>なにで勝ちましたか？</p>
+  <p>なにで負けましたか？</p>
   <%= f.collection_select(:category_id, Category.all, :id, :name, {},) %>
 
-  <p>いくら勝ちましたか？</p>
+  <p>いくら負けましたか？</p>
   <%= f.text_field :price %>円
   <%= f.submit "登録" %>
 <% end %>
