--- a/app/views/incomes/edit.html.erb
+++ b/app/views/incomes/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header' %>
+
 <% if @income.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@income.errors.count, "error") %> prohibited this income from being saved:</h2>
