--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header' %>
+
 <% if @payment.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@payment.errors.count, "error") %> prohibited this income from being saved:</h2>
