--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,18 +1,11 @@
-<h1>ギャンブル家計簿</h1>
-<p>ギャンブル専用の家計簿アプリです</p>
+<%= render 'shared/header' %>
 
 <%#ユーザー管理機能%>
+
 <ul>
   <% if user_signed_in? %>
-    <li><%= link_to current_user.name, "#", class: "user-nickname" %></li>
-    <li><%= link_to 'ログアウト', destroy_user_session_path, data: {turbo_method: :delete}, class: "logout"%></li>     
     <li><%= link_to '勝ったときはこちら', new_income_path %></li>
     <li><%= link_to '負けたときはこちら', new_payment_path %></li>
     <li><%= link_to '収支', incomes_path %></li>
-  <% else %>
-     <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-     <li><%= link_to '新規登録', new_user_registration_path , class: "sign-up" %></li>
   <% end %>
 </ul>
-
-
