--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -28,12 +28,16 @@
   margin-bottom: 20px; 
 }
 
-.win-btn, .lose-btn, .balance-btn, .limit-btn{
+.win-btn, .lose-btn, .balance-btn, .limit-btn, .lifetime-btn{
   color: black;
   text-decoration: none;
   font-size: 40px;
 }
 
-.win-btn:hover, .lose-btn:hover, .balance-btn:hover, .limit-btn:hover{
+.win-btn:hover, .lose-btn:hover, .balance-btn:hover, .limit-btn:hover, .lifetime-btn:hover{
   text-decoration: underline;
+}
+
+.not-log-in{
+  font-size: 40px;
 }
