--- a/app/views/incomes/edit.html.erb
+++ b/app/views/incomes/edit.html.erb
@@ -17,6 +17,7 @@
 
     <h2>収入額の編集</h2>
     <%= link_to 'ホーム', root_path %>
+    <%= link_to '戻る' ,incomes_path%>
     <p>日を設定してください</p>
 
     <%= form_with model: @income, local: true, data: { turbo: false } do |f| %>
