--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -3,18 +3,20 @@
 <div class="background-image">
   <%= image_tag "keiba.png", class: "background" %>
   <div class="content">
-    <h1>月毎の収支</h1>
-    <%= link_to 'ホーム', root_path %>
+    <h1 class="monthly-balance-title">月毎の収支</h1>
+    <%= link_to 'ホーム', root_path, class: "home-link" %>
 
-    <%= form_tag(incomes_path, method: :get) do %>
-      <%= select_tag :selected_month, options_for_select(@available_months), prompt: '月を選択' %>
-      <%= submit_tag '表示' %>
-    <% end %>
+    <div class="form-container">
+      <%= form_tag(incomes_path, method: :get, class: "month-selection-form") do %>
+        <%= select_tag :selected_month, options_for_select(@available_months), { prompt: '月を選択', class: "month-select" } %>
+        <%= submit_tag '表示', class: "display-btn" %>
+      <% end %>
+    </div>
 
     <% if params[:selected_month].present? %>
-      <h2><%= params[:selected_month] %> の収支概要</h2>
+      <h2 class="balance-detail-title"><%= params[:selected_month] %> の収支概要</h2>
       <div class="table-container">
-        <table>
+        <table class="summary-table">
           <thead>
             <tr>
               <th>月</th>
@@ -34,9 +36,9 @@
         </table>
       </div>
 
-      <h3><%= params[:selected_month] %> の回収額一覧</h3>
+      <h3 class="income-list-title"><%= params[:selected_month] %> の回収額一覧</h3>
       <div class="table-container">
-        <table>
+        <table class="income-table">
           <thead>
             <tr>
               <th>日付</th>
@@ -52,7 +54,7 @@
                 <td><%= income.category.name %></td>
                 <td><%= income.price %></td>
                 <td>
-                  <%= link_to "編集", edit_income_path(income) %>
+                  <%= link_to "編集", edit_income_path(income), class: "edit-link" %>
                   <%= link_to "削除", income_path(income), method: :delete, data: { custom_confirm: '本当に削除しますか？', turbo_method: :delete }, class: 'delete-link' %>
                 </td>
               </tr>
@@ -61,9 +63,9 @@
         </table>
       </div>
 
-      <h3><%= params[:selected_month] %> の投資額一覧</h3>
+      <h3 class="payment-list-title"><%= params[:selected_month] %> の投資額一覧</h3>
       <div class="table-container">
-        <table>
+        <table class="payment-table">
           <thead>
             <tr>
               <th>日付</th>
@@ -79,7 +81,7 @@
                 <td><%= payment.category.name %></td>
                 <td><%= payment.price %></td>
                 <td>
-                  <%= link_to "編集", edit_payment_path(payment) %>
+                  <%= link_to "編集", edit_payment_path(payment), class: "edit-link" %>
                   <%= link_to "削除", payment_path(payment), method: :delete, data: { custom_confirm: '本当に削除しますか？', turbo_method: :delete }, class: 'delete-link' %>
                 </td>
               </tr>
@@ -87,28 +89,36 @@
           </tbody>
         </table>
       </div>
-      <% balance = @monthly_balances_summary[params[:selected_month]]||0%>
+      <% balance = @monthly_balances_summary[params[:selected_month]] || 0 %>
+      <div class="current-status">
         <h3>現状</h3>
-      <% if balance > 0 %>
-        <p>※※勝っていますが、ハマりすぎには注意しましょう！※※</p>
-      <% elsif balance < 0 %>
-        <p>※※負けていますね、これを機に辞めてはいかがですか？※※</p>
-      <% else %>
-        <p>※※まだ負けていない今が辞めどきだと思いますよ！※※</p>
-      <% end %>
-      <h3>あなたへのメッセージ</h3>
-      <% if @limit.present? %>
-        <% remaining_budget = @limit.goal - (@monthly_payments_summary[params[:selected_month]] || 0) %>
-        <% if remaining_budget > 0 %>
-          <p>予算内で楽しめていますね</p>
-        <% elsif remaining_budget < 0 %>
-          <p>予算を<%= remaining_budget.abs %>円オーバーしています！これ以上かけるのは控えましょう！</p>
+        <p class="<%= balance > 0 ? 'positive-balance' : 'negative-balance' %>">
+          <% if balance > 0 %>
+            ※※勝っていますが、ハマりすぎには注意しましょう！※※
+          <% elsif balance < 0 %>
+            ※※負けていますね、これを機に辞めてはいかがですか？※※
+          <% else %>
+            ※※まだ負けていない今が辞めどきだと思いますよ！※※
+          <% end %>
+        </p>
+      </div>
+      <div class="message-to-user">
+        <h3>あなたへのメッセージ</h3>
+        <% if @limit.present? %>
+          <% remaining_budget = @limit.goal - (@monthly_payments_summary[params[:selected_month]] || 0) %>
+          <p class="<%= remaining_budget > 0 ? 'within-budget' : 'over-budget' %>">
+            <% if remaining_budget > 0 %>
+              予算内で楽しめていますね
+            <% elsif remaining_budget < 0 %>
+              予算を<%= remaining_budget.abs %>円オーバーしています！これ以上かけるのは控えましょう！
+            <% else %>
+              予算通りです。ここで終わりにしましょう
+            <% end %>
+          </p>
         <% else %>
-          <p>予算通りです。ここで終わりにしましょう</p>
+          <p>上限金額が設定されていません。</p>
         <% end %>
-      <% else %>
-        <p>上限金額が設定されていません。</p>
-      <% end %>
+      </div>
     <% end %>
   </div>
 </div>
