--- a/app/views/incomes/lifetime_balance.html.erb
+++ b/app/views/incomes/lifetime_balance.html.erb
@@ -3,22 +3,24 @@
 <div class="background-image">
   <%= image_tag "keiba.png", class: "background" %>
   <div class="content">
-    <h1>生涯収支</h1>
+    <h1 class="lifetime-title">生涯収支</h1>
     <div class="lifetime-balance">
-      <p>総収入: <%= number_with_delimiter(@total_incomes) %>円</p>
-      <p>総支出: <%= number_with_delimiter(@total_payments) %>円</p>
-      <p>生涯収支: <%= number_with_delimiter(@lifetime_balance) %>円</p>
+      <p class="total-incomes">総収入: <%= number_with_delimiter(@total_incomes) %>円</p>
+      <p class="total-payments">総支出: <%= number_with_delimiter(@total_payments) %>円</p>
+      <p class="lifetime-balance-total">生涯収支: <%= number_with_delimiter(@lifetime_balance) %>円</p>
     </div>
 
-    <h2>あなたへのありがたいメッセージ</h2>
-    <% if @lifetime_balance < 0%>
-      <p><%= @lifetime_balance.abs %>円があったら何ができたかを考えてみましょう</p>
-    <% elsif @lifetime_balance > 0 %>
-      <p>勝ってるうちにやめた方がいいですよ</p>
-    <% else %>
-      <p>何か得るものはありましたか？</p>
-    <% end %>
-    <%= link_to 'ホーム', root_path %>
+    <h2 class="advice-title">あなたへのありがたいメッセージ</h2>
+    <div class="advice-message">
+      <% if @lifetime_balance < 0 %>
+        <p class="negative-balance-message"><%= @lifetime_balance.abs %>円があったら何ができたかを考えてみましょう</p>
+      <% elsif @lifetime_balance > 0 %>
+        <p class="positive-balance-message">勝ってるうちにやめた方がいいですよ</p>
+      <% else %>
+        <p class="neutral-balance-message">何か得るものはありましたか？</p>
+      <% end %>
+    </div>
+    <%= link_to 'ホーム', root_path, class: 'home-link' %>
   </div>
 </div>
 
