--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -94,11 +94,11 @@
         <h3>現状</h3>
         <p class="<%= balance > 0 ? 'positive-balance' : 'negative-balance' %>">
           <% if balance > 0 %>
-            ※※勝っていますが、ハマりすぎには注意しましょう！※※
+            勝っていますが、ハマりすぎには注意しましょう！
           <% elsif balance < 0 %>
-            ※※負けていますね、これを機に辞めてはいかがですか？※※
+            負けていますね、これを機に辞めてはいかがですか？
           <% else %>
-            ※※まだ負けていない今が辞めどきだと思いますよ！※※
+            まだ負けていない今が辞めどきだと思いますよ！
           <% end %>
         </p>
       </div>
