--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <div class="background-image">
   <%= image_tag "keiba.png", class: "background" %>
   <div class="content">
-    <h2>Sign up</h2>
+    <h2>新規登録</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: 'submit-btn' %>
+        <%= f.submit "新規登録", class: 'submit-btn' %>
       </div>
     <% end %>
 
