--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
           <%= link_to current_user.name, "#", class: "user-nickname" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'ログアウト', destroy_user_session_path, class: "logout-btn" %>
+          <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete },class: "logout-btn" %>
         </li>     
       <% else %>
         <li class="nav-item">
